# University

./: .gitignore
First Year/C++_Labs/: 15_function_practices.cpp  heart_disease.cpp
First Year/C++_Labs/Lab_1/: .~lock.lab1.docx#  lab1.docx
First Year/C++_Labs/Lab_2/: ddtestd.cpp
First Year/C++_Labs/Lab_3/: q2_11.cpp  q2_26.cpp  q2_28.cpp  q2_32.cpp  q2_5.cpp  q2_7.cpp  q2_9.cpp
First Year/C++_Labs/Lab_4/: .~lock.web.html#  q1.cpp  test  word.docx
First Year/C++_Labs/Lab_4/src/: q1.cpp  q2.cpp  q2_17.cpp  q2_18.cpp  q2_19.cpp  q2_20.cpp  q2_23.cpp  q2_24.cpp  q2_25.cpp  q2_26.cpp  q2_27.cpp  q2_28.cpp  q3_1.cpp  q3_10.cpp  q3_11.cpp  q3_12.cpp  q3_13.cpp  q3_14.cpp  q3_15.cpp  q3_16.cpp  q3_17.cpp  q3_18.cpp  q3_19.cpp  q3_2.cpp  q3_20.cpp  q3_21.cpp  q3_22.cpp  q3_23.cpp  q3_24.cpp  q3_25.cpp  q3_26.cpp  q3_27.cpp  q3_28.cpp  q3_29.cpp  q3_3.cpp  q3_30.cpp  q3_31.cpp  q3_32.cpp  q3_33.cpp  q3_34.cpp  (+6 more)
First Year/C++_Labs/Lab_5/: word.docx
First Year/C++_Labs/Lab_5/src/: q2_1.cpp  q2_10.cpp  q2_11.cpp  q2_13.cpp  q2_2.cpp  q2_3.cpp  (+11 more)
First Year/computer_basics/: cv_10_27_24.docx
First Year/computer_basics/Last_half_term_assignment/: Linux.docx  Linux.pptx  Linux.xlsx
First Year/critical_thinking_app_demonstration/recap/backend/: Cargo.toml  tauri.conf.json
First Year/critical_thinking_app_demonstration/recap/backend/src/: lib.rs
First Year/it/: students.accdb
First Year/it/backup/: students.accdb  students.laccdb
First Year/python/: exercises.docx  lab1.odt  lab2.odt  lab3.odt  lab4.odt  shatha_python_project.docx  shatha_python_project.py
(+8 files in other folders)
