[package]
name = "recap"
version = "0.1.0"
description = "Recap"
authors = ["Abdullah Al-Banna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"
screenshots = "0.8"
image = "0.25"
chrono = { version = "0.4", features = ["clock", "std"] }
reqwest = {version = "0.11", features = ["multipart", "blocking"] }
tauri-plugin-screenshots = "2.1.0"

[lints]
workspace = true
